changes to auth and login

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,12 +7,13 @@ html
   body
     div.header-cont
       div.header
-        a.home-link(href="/")
+        a.home-link(href="/tickets")
         div.header_link_box
 
           a(href='/tickets') open tickets
           a(href='/signin') sign in
           a(href='/signout') sign out
+
     div.page-wrap
       block content
     div.footer
