add employees, teams, and assignments

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,7 @@ html
           a(href='/tickets') open tickets
           a(href='/signin') sign in
           a(href='/signout') sign out
+          a(href='/employees') employees
 
     div.page-wrap
       block content
